maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:41: error: not found: value l
  l = T.length
  ^JediEscaper:42: error: not found: value indice
  indice = 0
  ^JediEscaper:43: error: not found: value l
  for (j <- 0 to l){
                 ^JediEscaper:44: error: not found: value indice
    if (T(indice) > T(j))
          ^JediEscaper:45: error: not found: value indice
    	indice = j
        ^JediEscaper:47: error: not found: value indice
  return indice
         ^JediEscaper:59: error: not found: value L
    if (xBuggle + 1 < L){Array(0)  = getIndication(xBuggle + 1,yBuggle)}//Droite
                      ^JediEscaper:59: error: value update is not a member of object Array
    if (xBuggle + 1 < L){Array(0)  = getIndication(xBuggle + 1,yBuggle)}//Droite
                         ^JediEscaper:60: error: value update is not a member of object Array
    if (xBuggle - 1 >= 0){Array(1) = getIndication(xBuggle - 1,yBuggle)}//Gauche
                          ^JediEscaper:61: error: not found: value H
    if (yBuggle + 1 < H){Array(2)  = getIndication(xBuggle,yBuggle + 1)}//Bas
                      ^JediEscaper:61: error: value update is not a member of object Array
    if (yBuggle + 1 < H){Array(2)  = getIndication(xBuggle,yBuggle + 1)}//Bas
                         ^JediEscaper:62: error: value update is not a member of object Array
    if (yBuggle - 1 >= 0){Array(3) = getIndication(xBuggle,yBuggle - 1)}//Haut
                          ^JediEscaper:64: error: not found: value directionInt
    directionInt = iMin(cases)
    ^JediEscaper:66: error: not found: value directionInt
    directionInt match{
    ^